Added database implementation